// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`info-popup-setting Renders \`info-popup-setting\` with empty modal 1`] = `
<form
  class="v-form"
  novalidate="novalidate"
>
  <div
    class="modal-wrapper"
    close=""
  >
    <div
      class="title"
    >
      <span>
        Info popup
      </span>
    </div>
    <div
      class="text"
    >
      <div
        class="layout justify-end"
      >
        <button
          class="v-btn v-btn--fab v-btn--icon v-btn--round theme--light v-size--small secondary--text"
          type="button"
        >
          <span
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              add
            </i>
          </span>
        </button>
      </div>
      <div
        class="layout column"
      />
    </div>
    <div
      class="actions"
    >
      <button
        class="v-btn v-btn--text theme--light v-size--default"
        type="button"
      >
        <span
          class="v-btn__content"
        >
        Cancel
        </span>
      </button>
      <button
        class="primary v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default"
        type="submit"
      >
        <span
          class="v-btn__content"
        >
        Submit
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`info-popup-setting Renders \`info-popup-setting\` with interval 1`] = `
<form
  class="v-form"
  novalidate="novalidate"
>
  <div
    class="modal-wrapper"
    close=""
  >
    <div
      class="title"
    >
      <span>
        Info popup
      </span>
    </div>
    <div
      class="text"
    >
      <div
        class="layout justify-end"
      >
        <button
          class="v-btn v-btn--fab v-btn--icon v-btn--round theme--light v-size--small secondary--text"
          type="button"
        >
          <span
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              add
            </i>
          </span>
        </button>
      </div>
      <div
        class="layout column"
      >
        <div
          class="my-1 v-card v-card--flat v-sheet theme--light secondary white--text"
        >
          <div
            class="v-card__title"
          >
            <div
              class="layout justify-space-between"
            >
              <div>
                Column: alarm.v.connector
              </div>
              <div>
                <button
                  class="v-btn v-btn--icon v-btn--round theme--light v-size--small"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate material-icons theme--light error--text"
                    >
                      delete
                    </i>
                  </span>
                </button>
                <button
                  class="v-btn v-btn--icon v-btn--round theme--light v-size--small"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate material-icons theme--light primary--text"
                    >
                      edit
                    </i>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="v-card__text"
          >
            <p>
              Template:
            </p>
            <div
              class="v-input v-textarea v-input--is-label-active v-input--is-dirty v-input--is-disabled theme--dark v-text-field"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <textarea
                      disabled="disabled"
                      rows="5"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--dark"
                  >
                    <transition-group-stub
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="my-1 v-card v-card--flat v-sheet theme--light secondary white--text"
        >
          <div
            class="v-card__title"
          >
            <div
              class="layout justify-space-between"
            >
              <div>
                Column: extra_details
              </div>
              <div>
                <button
                  class="v-btn v-btn--icon v-btn--round theme--light v-size--small"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate material-icons theme--light error--text"
                    >
                      delete
                    </i>
                  </span>
                </button>
                <button
                  class="v-btn v-btn--icon v-btn--round theme--light v-size--small"
                  type="button"
                >
                  <span
                    class="v-btn__content"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon notranslate material-icons theme--light primary--text"
                    >
                      edit
                    </i>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="v-card__text"
          >
            <p>
              Template:
            </p>
            <div
              class="v-input v-textarea v-input--is-label-active v-input--is-dirty v-input--is-disabled theme--dark v-text-field"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-text-field__slot"
                  >
                    <textarea
                      disabled="disabled"
                      rows="5"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--dark"
                  >
                    <transition-group-stub
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="actions"
    >
      <button
        class="v-btn v-btn--text theme--light v-size--default"
        type="button"
      >
        <span
          class="v-btn__content"
        >
        Cancel
        </span>
      </button>
      <button
        class="primary v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default"
        type="submit"
      >
        <span
          class="v-btn__content"
        >
        Submit
        </span>
      </button>
    </div>
  </div>
</form>
`;
